Fix image vertical align

--- a/assets/css/admin/editor-rtl.css
+++ b/assets/css/admin/editor-rtl.css
@@ -512,6 +512,7 @@ sup {
 img {
 	height: auto;
 	max-width: 100%;
+	vertical-align: middle;
 }
 
 ::-moz-selection {
