--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -208,6 +208,7 @@ sup {
 img {
 	height: auto;
 	max-width: 100%;
+	vertical-align: middle;
 }
 
 ::selection {
