--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -30,7 +30,6 @@
 
 	img, svg {
 		max-width: 100%;
-		vertical-align: bottom;
 	}
 }
 
